Endpoint `GET /fretes/calcular?cep=XXXXX-XXX` que resolve UF via ViaCEP e retorna { uf, valor }.